--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -25,8 +25,16 @@ div {
   margin-bottom: 16px; */
   margin: 16px auto;
 }
+
 .margin-left {
   margin-left: 16px;
+}
+
+.container-white {
+  margin: 16px;
+  padding: 4px;
+  color: rgb(51, 51 ,51);
+  background-color: white;
 }
 
 /* HEADING */
@@ -111,6 +119,21 @@ div {
   color: rgb(255, 255, 255);
   background-color: rgb(51, 51, 51);
   border-color: rgb(51, 51, 51);
+}
+
+/* SHIPPING & RETURNS */
+
+/* #shipping-returns {
+  margin: 16px;
+  padding: 4px;
+} */
+
+.shipping-green {
+  color: rgb(0, 102, 1);
+}
+
+.shipping-warning {
+  color: rgb(232, 105, 0);
 }
 
 /* DISPLAY */
