--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -15,6 +15,11 @@ div {
   display: block;
 }
 
+li {
+  display: list-item;
+  margin-left: 20px;
+}
+
 /* CONTAINER */
 
 #main-container {
@@ -28,6 +33,11 @@ div {
 
 .margin-left {
   margin-left: 16px;
+  font-size: 14px;
+  flex: 0 1 auto;
+  flex-flow: row wrap;
+  height: 100%;
+  width: 100%;
 }
 
 .container-white {
@@ -35,6 +45,17 @@ div {
   padding: 4px;
   color: rgb(51, 51 ,51);
   background-color: white;
+}
+
+.container-highlights {
+  box-sizing: border-box;
+  margin: 16px;
+  padding: 0;
+  display: flex;
+  flex-flow: row wrap;
+  height: 100%;
+  width: 100%;
+  list-style: outside none none;
 }
 
 /* HEADING */
@@ -134,6 +155,24 @@ div {
 
 .shipping-warning {
   color: rgb(232, 105, 0);
+}
+
+/* HIGHLIGHTS */
+
+.highlight-element {
+  /* flex: 0 0 auto; */
+  flex-grow: 1;
+  display: flex;
+  padding-right: 16px;
+  padding-top: 12px;
+  /* margin-left: initial; */
+  flex-basis: 23%;
+  max-width: 23%;
+}
+
+.highlight-item {
+  list-style-type: disc;
+  /* max-width: 25%; */
 }
 
 /* DISPLAY */
