--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -100,6 +100,7 @@ hr {
   text-align: center;
   font-size: 16px;
   color: rgb(102, 102, 102);
+  cursor: pointer;
 }
 
 .tab.selected {
@@ -256,6 +257,7 @@ hr {
   font-size: 12px;
   color: rgb(102, 102, 102);
   margin-bottom: 16px;
+  margin-top: 4px;
 }
 
 .answer-click {
