--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -245,7 +245,7 @@ hr {
 
 .container-answer {
   padding-left: 16px;
-  padding-bottom: 16px;
+  /* padding-bottom: 8px; */
   padding-right: 16px;
 }
 
