--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -23,6 +23,7 @@ li {
 
 hr {
   margin-top: 16px;
+  margin-right: 32px;
   /* margin-bottom: 16px; */
   border-width: 1px 0 0;
   border-top-style: solid;
@@ -42,6 +43,7 @@ hr {
 
 .margin-left {
   margin-left: 16px;
+  margin-right: 16px;
   font-size: 14px;
   flex: 0 1 auto;
   flex-flow: row wrap;
@@ -152,6 +154,30 @@ hr {
   border-color: rgb(51, 51, 51);
 }
 
+.btn.question {
+  width: 100%;
+  padding: 12px 16px;
+  font-size: 16px;
+}
+
+.btn.question.ask {
+  color: white;
+  background-color: rgb(204, 0, 0);
+  border-color: rgb(204, 0, 0);
+}
+
+.btn.question.ask:hover {
+  color: rgb(255, 255, 255);
+  background-color: rgb(170, 0, 0);
+  border-color: rgb(170, 0, 0);
+}
+
+.btn.question.ask:active {
+  color: rgb(255, 255, 255);
+  background-color: rgb(121, 0, 0);
+  border-color: rgb(121, 0, 0);
+}
+
 /* SHIPPING & RETURNS */
 
 /* #shipping-returns {
@@ -241,6 +267,29 @@ hr {
   color: rgb(102, 102, 102);
   margin-top: -8px;
   margin-bottom: 16px;
+}
+
+.question-button-row {
+  /* align-self: center; */
+  /* position: relative; */
+  display: flex;
+  flex-direction: row;
+  flex-grow: 1;
+  /* width: 95%; */
+  /* max-width: 50%; */
+  flex-basis: 50%;
+  /* flex: 1 0 auto; */
+  padding-left: 8px;
+  padding-right: 8px;
+  justify-content: space-evenly;
+}
+
+.question-button-column {
+  flex-basis: 50%;
+  max-width: 50%;
+  font-size: 16px;
+  padding-left: 8px;
+  padding-right: 8px;
 }
 
 .container-answer {
