Minor css update to highlights items to reduce padding for.

--- a/client/assets/style.css
+++ b/client/assets/style.css
@@ -206,7 +206,7 @@ hr {
 
 .highlightItem {
   list-style-type: disc;
-  padding-right: 16px;
+  /* padding-right: 16px; */
   margin-right: 16px;
 }
 
